fix scrollbars on tutorial frame

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -120,6 +120,12 @@ logo img {
   position: relative;
 }
 
+/* ========= Tutorial Page ========== */
+
+body.tasks.tutorial {
+  overflow-y: hidden;
+}
+
 #tutorialheader form {
   display: inline;
 }
